<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.BackupRestoreActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
        app:title="@string/backup_restore_data"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/outline_shape"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/ador_samibold"
            android:text="ব্যাকআপ"
            android:textColor="@color/purple_500"
            android:textSize="22dp" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/backup" />

        <Button
            android:id="@+id/backup_batton_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/backup_database"

            />

        <TextView
            android:id="@+id/backup_textview_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:textColor="@color/purple_500" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/outline_shape"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/ador_samibold"
            android:text="রিস্টোর"
            android:textColor="@color/purple_500"
            android:textSize="22dp" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/restore" />

        <Button
            android:id="@+id/restore_file_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/select_file"

            />

        <TextView
            android:id="@+id/restore_text_view_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_500"
            android:textAlignment="center"
            android:layout_marginBottom="10dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>